vlib/v/checker/tests/unused_last_expr_stmt_in_if.vv
enum MyEnum {
	xx
	yy
	zz
}

struct Abc {
mut:
	mode MyEnum
}

fn main() {
	a := Abc{}
	if a.mode == .zz {
		println('hello')
		a.mode == .yy
	}
}
